# pix

./: .gitignore  install.sh
api-perf/: README.md  analyze_latency.py  benchmark_cases.json  generate_benchmark.py  generate_compressed_data.py  meson.build  run_benchmarks.py
api-perf/benchmarks/compressdev/: README.md  template.c
api-perf/benchmarks/compressdev/empty/: call.c  headers.c  teardown.c
api-perf/benchmarks/compressdev/rte_comp_op_bulk_alloc_free/: call.c  headers.c  setup.c  teardown.c
api-perf/benchmarks/compressdev/rte_compressdev_enqueue_dequeue_burst_compress/: headers.c  setup.c  teardown.c
api-perf/benchmarks/compressdev/rte_compressdev_enqueue_dequeue_burst_decompress/: call.c  headers.c  setup.c  teardown.c
api-perf/benchmarks/compressdev/rte_compressdev_private_xform_create_free/: call.c  headers.c  setup.c  teardown.c
api-perf/benchmarks/cryptodev/: template.c
api-perf/benchmarks/cryptodev-wait/: template.c
api-perf/benchmarks/cryptodev-wait/empty/: call.c  cleanup.c
api-perf/benchmarks/cryptodev-wait/rte_cryptodev_enqueue_wait_dequeue_burst_decrypt/: call.c
api-perf/benchmarks/cryptodev-wait/rte_cryptodev_enqueue_wait_dequeue_burst_encrypt/: call.c  headers.c  teardown.c
api-perf/benchmarks/cryptodev/empty/: headers.c  setup.c  teardown.c
api-perf/benchmarks/cryptodev/rte_crypto_op_attach_sym_session/: call.c  cleanup.c  headers.c  (+2 more)
api-perf/benchmarks/dpdk/: template.c
api-perf/benchmarks/regexdev/: template.c
api-perf/driver/: benchmark_driver.c  benchmark_driver.h
ir-perf/: CMakeLists.txt  README.md  a.patch  analyze_memory_latency.py  bench-driver-alloca.c  bench-driver.c  dpa_runner.py  dpa_telemetry_helper.c  generate_bench_ll.py  generate_load_benchmarks.py  generate_load_latency_ir.py  operators.txt  run_benchmarks.py
ir-perf/cmake/: find_bitcode_compiler.cmake
ir-perf/dpa/: CMakeLists.txt  run_dpa_benchmarks.py
ir-perf/dpa/host/: dpa_bench_host.c
ir-perf/dpa/scripts/: build_one_bench.py  convert_to_dpa_ll.py
ir-perf/snippets/: README.md
ir-perf/snippets/alloca/: alloca-2.ll  alloca-4.ll  alloca.ll
ir-perf/snippets/arithmetic/: add-imm-2.ll  add-imm-4.ll  add-imm.ll  add-reg-2.ll  add-reg-4.ll  add-reg.ll  and-imm-2.ll  and-imm-4.ll  and-imm.ll  and-reg-2.ll  and-reg-4.ll  and-reg.ll  ashr-imm-2.ll  ashr-imm-4.ll  ashr-imm.ll  ashr-reg-2.ll  ashr-reg-4.ll  ashr-reg.ll  lshr-imm-2.ll  lshr-imm-4.ll  lshr-imm.ll  lshr-reg-2.ll  lshr-reg-4.ll  lshr-reg.ll  mul-imm-2.ll  mul-imm-4.ll  mul-imm.ll  mul-reg-2.ll  mul-reg-4.ll  mul-reg.ll  or-imm-2.ll  or-imm-4.ll  or-imm.ll  or-reg-2.ll  or-reg-4.ll  or-reg.ll  sdiv-imm-2.ll  sdiv-imm-4.ll  sdiv-imm.ll  sdiv-reg-2.ll  (+41 more)
ir-perf/snippets/branching/: alternating-2.ll  alternating-4.ll  alternating.ll  always-not-taken-2.ll  always-not-taken-4.ll  always-not-taken.ll  always-taken-2.ll  always-taken-4.ll  always-taken.ll  jump-direct-2.ll  jump-direct-4.ll  jump-direct.ll  random-2.ll  random-4.ll  random.ll
ir-perf/snippets/call/: call-1arg-2.ll  call-1arg-4.ll  call-1arg.ll  call-2args-2.ll  call-2args-4.ll  call-2args.ll  call-4args-2.ll  call-4args-4.ll  call-4args.ll  call-indirect-2.ll  call-indirect-4.ll  call-indirect-array-2.ll  call-indirect-array-4.ll  call-indirect-array.ll  call-indirect.ll  call-void-2.ll  call-void-4.ll  call-void.ll
ir-perf/snippets/control/: br-2.ll  br-4.ll  br-alternating.ll  br-conditional.ll  br-not-taken.ll  br-taken.ll  br-unconditional.ll  call-2.ll  call-4.ll  call-indirect-2.ll  call-indirect.ll  call-with-arg-2.ll  call-with-arg-4.ll  call-with-arg.ll  call.ll  ret-deep.ll  ret-shallow.ll  ret-very-deep.ll  switch-dense.ll  switch-hot.ll  switch-sparse.ll  switch-uniform.ll
ir-perf/snippets/conversion/: bitcast-2.ll  bitcast-4.ll  bitcast.ll  fcmp-imm-2.ll  fcmp-imm-4.ll  fcmp-imm.ll  fcmp-reg-2.ll  fcmp-reg-4.ll  fcmp-reg.ll  fpext-2.ll  fpext-4.ll  fpext.ll  fptosi-2.ll  fptosi-4.ll  fptosi.ll  fptoui-2.ll  fptoui-4.ll  fptoui.ll  fptrunc-2.ll  fptrunc-4.ll  fptrunc.ll  icmp-imm-2.ll  icmp-imm-4.ll  icmp-imm.ll  icmp-reg-2.ll  icmp-reg-4.ll  icmp-reg.ll  inttoptr-2.ll  inttoptr-4.ll  inttoptr.ll  ptrtoint-2.ll  ptrtoint-4.ll  ptrtoint.ll  sext-2.ll  sext-4.ll  sext.ll  sitofp-2.ll  sitofp-4.ll  sitofp.ll  trunc-2.ll  (+8 more)
ir-perf/snippets/fp-arithmetic/: fadd-imm-2.ll  fadd-imm-4.ll  fadd-imm.ll  fadd-reg-2.ll  fadd-reg-4.ll  fadd-reg.ll  fdiv-imm-2.ll  fdiv-imm-4.ll  fdiv-imm.ll  fdiv-reg-2.ll  fdiv-reg-4.ll  fdiv-reg.ll  fmul-imm-2.ll  fmul-imm-4.ll  fmul-imm.ll  fmul-reg-2.ll  fmul-reg-4.ll  fmul-reg.ll  fneg-2.ll  fneg-4.ll  fneg.ll  frem-imm-2.ll  frem-imm-4.ll  frem-imm.ll  frem-reg-2.ll  frem-reg-4.ll  frem-reg.ll  fsub-imm-2.ll  fsub-imm-4.ll  fsub-imm.ll  fsub-reg-2.ll  fsub-reg-4.ll  fsub-reg.ll
ir-perf/snippets/memory/: load-1MB-2.ll  load-1MB-4.ll  load-1MB.ll  load-2KB-2.ll  load-2KB-4.ll  load-2KB.ll  load-32KB-2.ll  load-32KB-4.ll  load-32KB.ll  load-512MB-2.ll  load-512MB-4.ll  load-512MB.ll  load-hit-2.ll  load-hit-4.ll  load-hit.ll  load-miss-2.ll  load-miss-4.ll  load-miss.ll  load.ll  store-1MB-2.ll  store-1MB-4.ll  store-1MB.ll  store-2KB-2.ll  store-2KB-4.ll  store-2KB.ll  store-32KB-2.ll  store-32KB-4.ll  store-32KB.ll  store-512MB-2.ll  store-512MB-4.ll  store-512MB.ll  store-hit-2.ll  store-hit-4.ll  store-hit.ll  store-miss-2.ll  store-miss-4.ll  store-miss.ll  store.ll
ir-perf/snippets/phi/: phi-simple.ll
ir-perf/snippets/pointer/: extractelement-imm-2.ll  extractelement-imm-4.ll  extractelement-imm.ll  extractelement-reg-2.ll  extractelement-reg-4.ll  extractelement-reg.ll  extractvalue-2.ll  extractvalue-4.ll  extractvalue.ll  getelementptr-imm.ll  getelementptr-reg-2.ll  getelementptr-reg-4.ll  insertelement-imm-2.ll  insertelement-imm-4.ll  insertelement-imm.ll  insertelement-reg-2.ll  insertelement-reg-4.ll  insertelement-reg.ll  insertvalue-2.ll  insertvalue-4.ll  insertvalue.ll  shufflevector-2.ll  shufflevector-4.ll  shufflevector.ll
ir-perf/templates/: alloca.ll  arithmetic.ll  branching.ll  call.ll  conversion.ll  fp-arithmetic.ll  memory.ll  phi.ll  pointer.ll  return.ll
(+146 files in other folders)
